# lsp-legid-setter

./: .gitignore  Makefile  README.md  pom.xml  run  send_message.sh  send_message_to_sns.sh  send_raw_message_to_sns.sh
component-test/cucumber/: .rubocop.yml  Gemfile  test
component-test/cucumber/features/: lsp-legid-setter.feature  sqs-lambda-hello-world.feature
component-test/cucumber/features/step_definitions/: hello_world.rb  lsp_legid_setter.rb
component-test/cucumber/features/support/: 00_env.rb  assumptions.rb
src/main/java/uk/co/bbc/lsp_legid_setter/: AwsClientProvider.java  Environment.java  ExampleSqsRequest.java  Main.java  MatchNotFoundException.java  SqsLambdaHelloWorld.java  StaticParams.java  XmlParser.java
src/main/java/uk/co/bbc/sqs_lambda_hello_world/: AwsClientProvider.java  Environment.java  ExampleJustConfig.java  ExampleJustConfigParser.java  ExampleSqsRequest.java  Main.java  (+4 more)
src/main/resources/: logback.xml  sqs-lambda-hello-world.json
src/test/resources/: livestream-created.json  livestream-deleted.json
stacks/lsp-legid-setter/: Gemfile  Pipfile  README.md  pyproject.toml  stack_names.json
stacks/lsp-legid-setter/src/component/: generate-template
stacks/lsp-legid-setter/src/ispy/: generate-template
stacks/lsp-legid-setter/src/resource/: generate-template
stacks/sqs-lambda-hello-world/: README.md  pyproject.toml  stack_names.json
stacks/sqs-lambda-hello-world/src/component/: generate-template
stacks/sqs-lambda-hello-world/src/ispy/: generate-template
stacks/sqs-lambda-hello-world/src/resource/: generate-template
(+36 files in other folders)
